ipc/ipdl/test/ipdl/ok/array_OfActors.ipdl
include protocol "array_OfActorsSub.ipdl";

protocol array_OfActors {
    manages array_OfActorsSub;

child:
    Msg(array_OfActorsSub[] p);

    array_OfActorsSub();
};
